# allen-powerplatform-client

./: .openapi-generator-ignore  README.md  aind_api_connector_dev_openapi.yaml  aind_api_connector_prod_openapi.yaml  openapi.yaml  openapirc_python_client.json  pyproject.toml
.github/workflows/: build_dev_python_client.yml  python-client-dev-build.yml  python-client-publish.yml  python-tests.yml  run_dev_client_tests.yml  run_prod_client_tests.yml
clients/python-client-dev/: .gitlab-ci.yml  README.md  pyproject.toml  setup.py
clients/python-client-dev/.openapi-generator/: FILES
clients/python-client-dev/allen_powerplatform_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
clients/python-client-dev/docs/: DefaultApi.md  PostMouseWeightRecordRequest.md  ValidateEmailInSystemUsersRequest.md  ValidateMouseGUIDInMouseRegistryRequest.md  ValidateMouseInWaterRestrictedMiceTableRequest.md  WaterRestrictionPostWeightAndWaterRecordsRequest.md  WaterRestrictionUpdateRestrictionStatusRequest.md
clients/python-client-dev/test/: test_default_api.py  test_get_table_data_request.py  test_post_mouse_weight_record_request.py  test_validate_email_in_system_users_request.py  test_validate_mouse_guidin_mouse_registry_request.py  test_validate_mouse_idin_mouse_registry_request.py  test_validate_mouse_in_water_restricted_mice_table_request.py  (+4 more)
clients/python-client-prod/: README.md  pyproject.toml  setup.py  tox.ini
python-client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
python-client/.openapi-generator/: FILES
python-client/allen_powerplatform_client/: __init__.py  api_client.py  configuration.py  rest.py
python-client/docs/: DefaultApi.md  FetchProjectByNameRequest.md  FetchTableByNameRequest.md  GetTableRequest.md  PostBaselineWeightRequest.md  PostWaterRecordRequest.md  PostWeightRecordRequest.md  UpdateTargetWeightPercentageRequest.md  UpdateWaterRestrictionStatusRequest.md
python-client/test/: test_default_api.py  test_fetch_project_by_name_request.py  test_fetch_table_by_name_request.py  test_update_target_weight_percentage_request.py  test_update_water_restriction_status_request.py
(+49 files in other folders)
