[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aind-dataverse-service"
description = "Package to serve data from Dataverse."
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Allen Institute for Neural Dynamics"}
]
classifiers = [
    "Programming Language :: Python :: 3"
]
readme = "README.md"
dynamic = ["version"]

dependencies = [
   'openapi-generator-cli'
]

[project.optional-dependencies]
dev = [
    'black',
    'coverage',
    'flake8',
    'interrogate',
    'isort',
    'Sphinx',
    'furo',
    'pytest',
    'pytest-env',
    'pytest-mock',
    'pytest_asyncio',
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "aind_sharepoint_service_server.__version__"}

[tool.black]
line-length = 79
target_version = ['py310']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | .gitignore
)
'''

[tool.coverage.run]
omit = ["*__init__*"]
source = ["aind_sharepoint_service_server", "tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "^from .* import .*",
    "^import .*",
    "pragma: no cover"
]
fail_under = 100

[tool.isort]
line_length = 79
profile = "black"

[tool.interrogate]
exclude = ["setup.py", "docs", "build"]
fail-under = 100

[tool.pytest.ini_options]
asyncio_mode="auto"
asyncio_default_fixture_loop_scope="function"
env = [
    "DATAVERSE_HOST=host.environment.api.powerplatform.com",
    "DATAVERSE_API_VERSION=2024-10-01",
    "DATAVERSE_SP=/triggers/manual/run",
    "DATAVERSE_SV=1.0",
    "DATAVERSE_WORKFLOW_PROJECT_PATH=/powerautomate/path",
    "DATAVERSE_WORKFLOW_TABLE_PATH=/powerautomate/path",
    "DATAVERSE_WORKFLOW_TABLES_PATH=/powerautomate/path",
    "DATAVERSE_SIG_PROJECT_BY_NAME=example123",
    "DATAVERSE_SIG_TABLE_BY_NAME=example123",
    "DATAVERSE_SIG_ALL_TABLES=example123"
]